--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "material-react-table": "^2.13.0",
     "noty": "^3.2.0-beta-deprecated",
     "react": "^18.3.1",
